# backend_task

./: Dockerfile  README.md  pyproject.toml
src/: main.py  queue_manager.py  scraper.py  seed_initial_profiles.py
src/handlers/: post_handler.py  profile_handler.py
