[tool.poetry]
name = "linkedin-scraper"
version = "0.1.0"
description = ""
authors = ["Dhruvrajsinh Solanki <dhruvrajsinh251103@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
redis = "^5.2.0"
playwright = "^1.48.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
